@@ -1228,6 +1228,13 @@ enum hwloc_modify_infos_op_e {
 static __hwloc_inline int
 hwloc_obj_add_info(hwloc_obj_t obj, const char *name, const char *value);
 
+/** \brief Get the structure of info attributes attached to the topology.
+ *
+ * \note The function cannot return \c NULL.
+ * \note The returned pointer belongs to the hwloc library, it should not be freed or modified.
+ */
+HWLOC_DECLSPEC struct hwloc_infos_s * hwloc_topology_get_infos(hwloc_topology_t topology);
+
 /** @} */
 
 
